# f1-api

./: .env.example  .gitignore  Cargo.toml  LICENSE  PLACEHOLDERS.md  README.md  openapi.yaml
.cursor/rules/: no-comments.mdc
.github/workflows/: ci.yml
crates/api-types/: Cargo.toml
crates/api-types/src/: lib.rs
docker/: Dockerfile
docs/: guide.md
scripts/: ci_guards.sh
src/: circuits.rs  disclaimers.rs  main.rs  openf1.rs  policy.rs  response_cache.rs  state.rs
src/providers/: archive_common.rs  f2f3.rs  formula_e.rs  http.rs  indycar.rs  mod.rs  motogp.rs  nascar.rs  results_facts.rs  wrc.rs
src/routes/: health.rs  mod.rs  series_api.rs  status.rs  stub.rs
src/series/: mod.rs  registry.rs  tests.rs
